# wasvy

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml
examples/host_example/: Cargo.toml
examples/host_example/src/: main.rs
examples/python_example/: README.md  pyproject.toml
examples/python_example/src/python_example/: app.py
examples/python_example/src/python_example/guest/: __init__.py
examples/python_example/src/python_example/guest/imports/: functions.py  types.py
examples/python_example/wit/: world.wit
examples/simple/: Cargo.toml
examples/simple/src/: bindings.rs  lib.rs
examples/simple/wit/: guest.wit  world.wit
protocol/: Cargo.toml
protocol/src/: bindings.rs  lib.rs
protocol/wit/: ecs.wit  world.wit
src/: asset.rs  component.rs  component_registry.rs  engine.rs  host.rs  host_plugin.rs  lib.rs  main.rs  mods.rs  plugin.rs  prelude.rs  runner.rs  state.rs  systems.rs
src/deserializer/: mod.rs  processor.rs  struct_utils.rs  struct_visitor.rs
src/host/: app.rs  commands.rs  component.rs  mod.rs  query.rs  system.rs
wit/ecs/: ecs.wit
