[package]
name = "wasvy"
edition = "2024"

[workspace]
members = ["protocol"]
resolver = "2"

[workspace.package]
authors = ["EngoDev"]
categories = []
# edition = "2021"
rust-version = "1.85.0"
version = "0.0.1"
edition = "2024"
description = "Bevy WASM"
license = "MIT"
homepage = "https://github.com/EngoDev"
repository = "https://github.com/EngoDev"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
bevy = { version = "0.16.0", features = ["wayland"]}
bevy-inspector-egui = "0.31.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasmtime = { version = "32.0.0", features = ["component-model"] }
wasmtime-wasi = "32.0.0"
