[package]
name = "wasvy"
authors.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
publish = true

[workspace]
members = ["examples/host_example","examples/simple"]
resolver = "2"

[workspace.package]
authors = ["EngoDev"]
categories = ["wasm", "bevy"]
rust-version = "1.85.0"
version = "0.0.2"
edition = "2024"
description = "Bevy WASM"
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/crates/wasvy"
repository = "https://github.com/EngoDev/wasvy"
readme = "README.md"


[dependencies]
anyhow = "1.0.98"
bevy = { version = "0.16.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
wasmtime = { version = "32.0.0", features = ["component-model"] }
wasmtime-wasi = "32.0.0"
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }
