[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ehttp = "0.5.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:protocol"

[package.metadata.component.dependencies]
