[package]
name = "host_example"
authors.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
bevy = { version = "0.16.0", features = ["wayland", "dynamic_linking"]}
bevy-inspector-egui = "0.31.0"
wasmtime = "32.0.0"
wasmtime-wasi = "32.0.0"
wasmtime-wasi-http = "32.0.0"
wasvy = { path = "../../" }
