[package]
name = "host_example"
authors.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1.0.98"
bevy = { version = "0.16.0", features = ["wayland", "dynamic_linking"] }
bevy-inspector-egui = "0.31.0"
wasvy = { path = "../../" }
