[package]
name = "host_example"
authors.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
bevy = { version = "0.17.0-rc.1", features = ["wayland", "dynamic_linking"] }
bevy-inspector-egui = "0.33.1"
wasvy = { path = "../../" }
