[package]
name = "simple"
authors.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:simple"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasvy:ecs" = { path = "/home/engodev/projects/wasm/wasvy/examples/simple/wit/deps/wasvy-ecs"}
